pass daily goals from timer object, fix element highlights on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-* { margin: 0; padding: 0; box-sizing: border-box; }
+* { margin: 0; padding: 0; box-sizing: border-box; user-select: none; outline: 0; }
 html, body, #app { height: 100%; }
 svg { line-height: 0; }
 
